# mediabackup

./: .gitignore  Makefile  build.ps1  build.sh  mock_server.py  pyproject.toml
.github/workflows/: build.yml
docs/: media-backup-cli-spec.md
src/mediabackup/: cli.py  init.py  manifest.py  scanner.py  status.py  uploader.py
